_docs/v0.59/embedding/sdk/api/snippets/InteractiveQuestionProps.md
---
version: v0.59
has_magic_breadcrumbs: true
show_category_breadcrumb: true
show_title_breadcrumb: true
category: Embedding
title: InteractiveQuestionProps
source_url: 'https://github.com/metabase/metabase/blob/master/docs/embedding/sdk/api/snippets/InteractiveQuestionProps.md'
layout: new-docs
---

**`Expand`**

## Properties

<!-- [<snippet properties>] -->

| Property                                                    | Type                                                                                                                                                                                                                                                                                                 | Description                                                                                                                                            |
| :---------------------------------------------------------- | :--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | :----------------------------------------------------------------------------------------------------------------------------------------------------- |
| <a id="classname"></a> `className?`                         | `string`                                                                                                                                                                                                                                                                                             | A custom class name to be added to the root element.                                                                                                   |
| <a id="entitytypes"></a> `entityTypes?`                     | [`ModularEmbeddingEntityType`](./api/ModularEmbeddingEntityType)[]                                                                                                                                                                                                                                | An array that specifies which entity types are available in the data picker                                                                            |
| <a id="height"></a> `height?`                               | `Height`\<`string` \| `number`\>                                                                                                                                                                                                                                                                     | A number or string specifying a CSS size value that specifies the height of the component                                                              |
| <a id="hiddenparameters"></a> `hiddenParameters?`           | `string`[]                                                                                                                                                                                                                                                                                           | A list of parameters to hide.                                                                                                                          |
| <a id="initialsqlparameters"></a> `initialSqlParameters?`   | [`SqlParameterValues`](./api/SqlParameterValues)                                                                                                                                                                                                                                                  | Initial values for the SQL parameters.                                                                                                                 |
| <a id="issaveenabled"></a> `isSaveEnabled?`                 | `boolean`                                                                                                                                                                                                                                                                                            | Whether to show the save button.                                                                                                                       |
| <a id="onbeforesave"></a> `onBeforeSave?`                   | (`question`: `undefined` \| [`MetabaseQuestion`](./api/MetabaseQuestion), `context`: \{ `isNewQuestion`: `boolean`; \}) => [`Promise`](https://developer.mozilla.org/docs/Web/JavaScript/Reference/Global_Objects/Promise)\<`void`\>                                                              | A callback function that triggers before saving. Only relevant when `isSaveEnabled = true`                                                             |
| <a id="onnavigateback"></a> `onNavigateBack?`               | () => `void`                                                                                                                                                                                                                                                                                         | A callback function that triggers when a user clicks the back button.                                                                                  |
| <a id="onrun"></a> `onRun?`                                 | (`question`: `undefined` \| [`MetabaseQuestion`](./api/MetabaseQuestion)) => `void`                                                                                                                                                                                                               | A callback function that triggers when a question is updated, including when a user clicks the `Visualize` button in the question editor               |
| <a id="onsave"></a> `onSave?`                               | (`question`: [`MetabaseQuestion`](./api/MetabaseQuestion), `context`: \{ `dashboardTabId?`: `number`; `isNewQuestion`: `boolean`; \}) => `void`                                                                                                                                                   | A callback function that triggers when a user saves the question. Only relevant when `isSaveEnabled = true`                                            |
| <a id="onvisualizationchange"></a> `onVisualizationChange?` | (`display`: \| `"object"` \| `"table"` \| `"bar"` \| `"line"` \| `"pie"` \| `"scalar"` \| `"row"` \| `"area"` \| `"combo"` \| `"pivot"` \| `"smartscalar"` \| `"gauge"` \| `"progress"` \| `"funnel"` \| `"map"` \| `"scatter"` \| `"boxplot"` \| `"waterfall"` \| `"sankey"` \| `"list"`) => `void` | A callback function that triggers when the visualization type changes.                                                                                 |
| <a id="plugins"></a> `plugins?`                             | [`MetabasePluginsConfig`](./api/MetabasePluginsConfig)                                                                                                                                                                                                                                            | -                                                                                                                                                      |
| <a id="questionid"></a> `questionId?`                       | `null` \| [`SdkQuestionId`](./api/SdkQuestionId)                                                                                                                                                                                                                                                  | -                                                                                                                                                      |
| <a id="style"></a> `style?`                                 | [`CSSProperties`](https://github.com/DefinitelyTyped/DefinitelyTyped/blob/0b728411cd1dfb4bd26992bb35a73cf8edaa22e7/types/react/index.d.ts#L2579)                                                                                                                                                     | A custom style object to be added to the root element.                                                                                                 |
| <a id="targetcollection"></a> `targetCollection?`           | [`SdkCollectionId`](./api/SdkCollectionId)                                                                                                                                                                                                                                                        | The collection to save the question to. This will hide the collection picker from the save modal. Only applicable to interactive questions.            |
| <a id="title"></a> `title?`                                 | [`SdkQuestionTitleProps`](./api/SdkQuestionTitleProps)                                                                                                                                                                                                                                            | Determines whether the question title is displayed, and allows a custom title to be displayed instead of the default question title. Shown by default. |
| <a id="width"></a> `width?`                                 | `Width`\<`string` \| `number`\>                                                                                                                                                                                                                                                                      | A number or string specifying a CSS size value that specifies the width of the component                                                               |
| <a id="withalerts"></a> `withAlerts?`                       | `boolean`                                                                                                                                                                                                                                                                                            | Enables the ability to set up alerts on the question.                                                                                                  |
| <a id="withcharttypeselector"></a> `withChartTypeSelector?` | `boolean`                                                                                                                                                                                                                                                                                            | Determines whether the chart type selector and corresponding settings button are shown. Only relevant when using the default layout.                   |
| <a id="withdownloads"></a> `withDownloads?`                 | `boolean`                                                                                                                                                                                                                                                                                            | Enables the ability to download results in the question.                                                                                               |

<!-- [<endsnippet properties>] -->
